objects/Installed_Laser_Forms__c.object
<CustomObject>
    <description>Laser Forms installed by Client</description>
    <fields>
        <fullName>CMF_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMF Info</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipLabel>Installed Laser Forms</relationshipLabel>
        <relationshipName>R00N40000001m7zHEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <formula>CMF_Info__r.Ship_CMF__c</formula>
        <label>CMF #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copies__c</fullName>
        <label>Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <picklist>
            <picklistValues>
                <fullName>4 Square Worksheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Square Worksheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyers Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Information Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Rental Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Jacket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letterhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-WorkOrder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service WorkOrder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Order Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Car Appraisal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We Owe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worksheet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Types__c</fullName>
        <label>Form Types</label>
        <picklist>
            <controllingField>Form_Name__c</controllingField>
            <picklistValues>
                <fullName>1-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-up (Landscape)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF (Accounting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF (Customer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF (Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 2 (Accounting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 2 (Customer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 2 (Internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF Type 2 (Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAO_Id__c</fullName>
        <label>LAO Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO_Name__c</fullName>
        <label>LAO Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; LAO_Id__c ,  LAO_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAO #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laser_Order_Form_Form_Type__c</fullName>
        <label>Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>A/P Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Check Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Open Item - Portrait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Can)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Lease)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Truck)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Type 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Statement (Type 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addtl Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addtl Proofs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B/O Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/P Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/P Check Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Can)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Lease)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Truck)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Type 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color A/R Statement (Type 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color B/O Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Cust Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Custom Cust Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Custom Lease Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Custom Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Deal Jacket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Lease Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Letterhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color On Demand Check</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Laser_Order_Form_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overlay__c</fullName>
        <label>Overlay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Installed Laser Forms</label>
    <nameField>
        <displayFormat>ILF -{00000}</displayFormat>
        <label>Installed Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Laser Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>